--- a/css/styles.css
+++ b/css/styles.css
@@ -61,9 +61,9 @@ ul {
 }
 
 .container {
-  max-width: 1158px;
+  /* max-width: 1158px; */
   margin: 0 auto;
-  padding: 0 15px;
+  /* padding: 0 16px; */
 }
 
 .list {
@@ -462,12 +462,16 @@ img {
 
 .about-list {
   display: flex;
-  gap: 24px;
+  row-gap: 24px;
 }
 /* team */
 
 .team {
   background-color: var(--light);
+}
+
+.team-container {
+  max-width: 264px;
 }
 
 .team-title {
@@ -477,19 +481,17 @@ img {
 
 .team-list {
   display: flex;
+  flex-wrap: wrap;
+  row-gap: 72px;
 }
 
 .team-item {
   background-color: var(--white);
-}
-
-.team-item:not(:last-child) {
-  margin-right: 24px;
+  width: 100%;
 }
 
 .card {
-  padding-top: 32px;
-  padding-bottom: 32px;
+  padding: 32px 16px;
   text-align: center;
 
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
@@ -504,7 +506,7 @@ img {
 .card-soc-list {
   display: flex;
   justify-content: center;
-  gap: 24px;
+  column-gap: 24px;
 }
 
 .card-soc-item {
@@ -532,6 +534,15 @@ img {
 
 /* customers */
 
+.customers {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+.customers-container {
+  max-width: 396px;
+}
+
 .customers-title {
   text-align: center;
   margin-bottom: 72px;
@@ -539,11 +550,13 @@ img {
 
 .customers-list {
   display: flex;
-  gap: 24px;
+  flex-wrap: wrap;
+  column-gap: 16px;
+  row-gap: 72px;
 }
 
 .customers-item {
-  width: 168px;
+  width: calc((100% - 16px) / 2);
 }
 
 .customers-link {
