--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,5 @@
-@media screen and (min-widht: 428px) {
-    .container {
-        w
-    }
+@media screen and (min-width: 480px) {
+  .container {
+    max-width: 424px;
+  }
 }
