--- a/css/mobile.css
+++ b/css/mobile.css
@@ -1,5 +1,7 @@
 @media screen and (min-width: 480px) {
   .container {
     max-width: 424px;
+    margin-right: auto;
+    margin-left: auto;
   }
 }
