--- a/css/styles.css
+++ b/css/styles.css
@@ -61,10 +61,8 @@ ul {
 }
 
 .container {
-  /* max-width: 1158px; */
-  /* margin: 0 auto; */
-  padding-right: 16px;
-  padding-left: 16px;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .list {
@@ -128,15 +126,31 @@ img {
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
+  height: 70px;
 
   border-bottom: 1px solid var(--accent);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.header-container {
+.header > .container {
   display: flex;
   align-items: center;
+}
+
+.mob-header {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu-open-btn {
+  width: 32px;
+  height: 22px;
+}
+
+.header-content {
+  display: none;
 }
 
 .logo {
@@ -156,61 +170,13 @@ img {
   color: var(--primary-brand);
 }
 
-.nav {
-  display: flex;
-  margin-right: auto;
-}
+/* mob menu */
 
-.nav-list {
-  display: flex;
-  align-items: center;
-}
-
-.current-page {
-  color: var(--pressed-state);
-}
-
-.nav-item:not(:last-child) {
-  margin-right: 40px;
-}
-
-.nav-link {
-  color: var(--dark);
-  text-decoration: none;
-  font-weight: 500;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  transition: color var(--cubic-bezier);
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--pressed-state);
-}
-
-.address {
-  font-style: normal;
-}
-
-.address-list {
-  display: flex;
-}
-
-.address-item:not(:last-child) {
-  margin-right: 40px;
-}
-
-.address-link {
-  color: var(--text);
-  line-height: 1.5;
-  text-decoration: none;
-  letter-spacing: 0.02em;
-  transition: color var(--cubic-bezier);
-}
-
-.address-link:hover,
-.address-link:focus {
-  color: var(--pressed-state);
+.mob-menu {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  background-color: var(--white);
 }
 
 /* footer */
@@ -222,16 +188,15 @@ img {
   background-color: var(--dark);
 }
 
-.footer-container {
-  display: flex;
-  align-items: baseline;
-}
-
-.footer-logo-margin {
-  margin-right: 120px;
+.footer-logo-container {
+  margin-bottom: 72px;
 }
 
 .footer-logo {
+  display: block;
+  margin-bottom: 16px;
+  text-align: center;
+
   color: var(--light);
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -243,20 +208,22 @@ img {
 }
 
 .footer-text {
-  max-width: 264px;
-  margin-top: 16px;
+  max-width: 268px;
+  margin-right: auto;
+  margin-left: auto;
 
   color: var(--accent);
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
 
-.footer-soc-margin {
-  margin-right: 80px;
+.footer-soc-container {
+  margin-bottom: 72px;
 }
 
 .footer-soc-title {
   margin-bottom: 16px;
+  text-align: center;
 
   color: var(--white);
   font-weight: 500;
@@ -296,6 +263,7 @@ img {
 
 .footer-form-title {
   margin-bottom: 16px;
+  text-align: center;
 
   font-size: 16px;
   font-weight: 500;
@@ -306,13 +274,14 @@ img {
 
 .footer-form {
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
 .footer-input {
-  width: 264px;
+  width: 100%;
   height: 40px;
-  margin-right: 24px;
+  margin-bottom: 16px;
   padding: 8px 16px;
 
   font-size: 12px;
@@ -371,33 +340,44 @@ img {
 .hero {
   background-color: var(--dark);
 
-  background-image: var(--dark-gradient), url(../images/hero-bg.jpg);
+  background-image: var(--dark-gradient), url(../images/hero-bg-mob.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 1440px;
   margin: 0 auto;
 
+  display: flex;
+  justify-content: center;
   text-align: center;
 }
 
+@media (min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .hero {
+    background-image: var(--dark-gradient), url(../images/hero-bg-mob-2x.jpg);
+  }
+}
 .hero.section {
-  padding-top: 188px;
-  padding-bottom: 188px;
+  padding-top: 112px;
+  padding-bottom: 112px;
+}
+
+.hero-container {
+  padding-right: 54px;
+  padding-left: 54px;
 }
 
 .hero-title {
-  margin: 0 auto;
-  max-width: 500px;
-
   color: var(--white);
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.11;
   letter-spacing: 0.02em;
+  margin-bottom: 72px;
 }
 
 .hero-btn {
-  margin-top: 48px;
   min-width: 169px;
   padding: 16px 32px;
 
@@ -408,7 +388,7 @@ img {
   letter-spacing: 0.04em;
   cursor: pointer;
 
-  border: none;
+  border-color: transparent;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 
@@ -427,21 +407,19 @@ img {
 
 .features-list {
   display: flex;
+  flex-wrap: wrap;
+  row-gap: 72px;
 }
 
 .features-item {
-  width: 264px;
-}
-
-.features-item:not(:last-child) {
-  margin-right: 24px;
+  width: 100%;
 }
 
 .astounaut-icon-box {
   width: 264px;
   height: 112px;
   margin-bottom: 8px;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
 
@@ -450,10 +428,23 @@ img {
   background-color: var(--light);
 }
 
+.features-subtitle {
+  text-align: center;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.1;
+  letter-spacing: 0.02em;
+}
+
+.features-description {
+  font-weight: 500;
+}
+
 /* about */
 
 .about {
   padding-top: 0;
+  display: none;
 }
 
 .about-title {
@@ -471,6 +462,11 @@ img {
   background-color: var(--light);
 }
 
+.team-container {
+  padding-right: 82px;
+  padding-left: 82px;
+}
+
 .team-title {
   margin-bottom: 72px;
   text-align: center;
@@ -480,13 +476,11 @@ img {
   display: flex;
   flex-wrap: wrap;
   row-gap: 72px;
+  justify-content: center;
 }
 
 .team-item {
   background-color: var(--white);
-  width: 100%;
-  margin-right: auto;
-  margin-left: auto;
 }
 
 .card {
