--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,15 +1,137 @@
 @media screen and (min-width: 768px) {
   /* main containers */
   .container {
-    max-width: 552px;
-    padding-right: 0;
-    padding-left: 0;
+    max-width: 768px;
   }
 
-  .container.mini-container {
-    max-width: 552px;
-    padding-right: 0;
-    padding-left: 0;
+  .mini {
+    max-width: 582px;
+  }
+
+  /* header */
+
+  .nav {
+    display: flex;
+    margin-right: auto;
+  }
+
+  .nav-list {
+    display: flex;
+    align-items: center;
+  }
+
+  .current-page {
+    color: var(--pressed-state);
+  }
+
+  .nav-item:not(:last-child) {
+    margin-right: 40px;
+  }
+
+  .nav-link {
+    color: var(--dark);
+    text-decoration: none;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    transition: color var(--cubic-bezier);
+  }
+
+  .nav-link:hover,
+  .nav-link:focus {
+    color: var(--pressed-state);
+  }
+
+  .address {
+    font-style: normal;
+  }
+
+  .address-list {
+    display: flex;
+  }
+
+  .address-item:not(:last-child) {
+    margin-right: 40px;
+  }
+
+  .address-link {
+    color: var(--text);
+    line-height: 1.5;
+    text-decoration: none;
+    letter-spacing: 0.02em;
+    transition: color var(--cubic-bezier);
+  }
+
+  .address-link:hover,
+  .address-link:focus {
+    color: var(--pressed-state);
+  }
+
+  /* hero */
+  .hero {
+    background-image: var(--dark-gradient), url(../images/hero-bg.jpg);
+  }
+
+  @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+    .hero {
+      background-image: var(--dark-gradient), url(../images/hero-bg-2x.jpg);
+    }
+  }
+
+  .hero-title {
+    font-weight: 700;
+    max-width: 496px;
+    font-size: 56px;
+    line-height: 1.07;
+    margin-bottom: 48px;
+  }
+
+  /* footer */
+
+  .footer-logo-container {
+    margin-right: 24px;
+  }
+
+  .footer-logo {
+    text-align: left;
+  }
+
+  .footer-soc-title {
+    text-align: left;
+  }
+
+  .footer-tab-wrap {
+    display: flex;
+    align-items: baseline;
+  }
+
+  .footer-form-title {
+    text-align: left;
+  }
+
+  .footer-form {
+    flex-direction: row;
+    gap: 24px;
+  }
+
+  .footer-input {
+    width: 264px;
+    margin-bottom: 0;
+  }
+
+  /* features */
+  .features-list {
+    column-gap: 24px;
+  }
+
+  .features-item {
+    width: calc((100% - 24px) / 2);
+  }
+
+  .features-subtitle {
+    text-align: left;
   }
 
   /* team */
@@ -24,7 +146,7 @@
   }
 
   .team-item {
-    width: calc((100% - 24px) / 2);
+    width: 264px;
   }
 
   /* customers */
