--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,10 @@ ul {
   margin: -1px;
 }
 
+.no-scroll {
+  overflow: hidden;
+}
+
 img {
   display: block;
   max-width: 100%;
@@ -126,7 +130,6 @@ img {
 .header {
   padding-top: 24px;
   padding-bottom: 24px;
-  height: 70px;
 
   border-bottom: 1px solid var(--accent);
   box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
@@ -145,8 +148,18 @@ img {
 }
 
 .menu-open-btn {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 32px;
   height: 22px;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-open-icon {
+  stroke: black;
 }
 
 .header-content {
@@ -174,9 +187,104 @@ img {
 
 .mob-menu {
   position: fixed;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100vh;
   background-color: var(--white);
+}
+
+.mob-menu > .container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-top: 80px;
+  padding-bottom: 40px;
+  height: 100vh;
+}
+
+.menu-close {
+  position: absolute;
+  width: 24px;
+  height: 24px;
+
+  top: 24px;
+  right: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--accent);
+  cursor: pointer;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+
+  transition: background-color var(--cubic-bezier), fill var(--cubic-bezier);
+}
+
+.menu-close:active {
+  background-color: var(--pressed-state);
+  fill: #ffffff;
+}
+
+.menu-item-link {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  color: var(--dark);
+}
+
+.menu-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.mob-menu > .address {
+  margin-bottom: 48px;
+}
+
+.menu-address-list {
+  font-style: normal;
+  margin-bottom: 40px;
+}
+
+.menu-address-item:not(:last-child) {
+  margin-bottom: 40px;
+}
+
+.menu-tel {
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.11;
+  color: var(--primary-brand);
+}
+
+.menu-mail {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--text);
+}
+
+.menu-soc-list {
+  display: flex;
+  justify-content: space-evenly;
+}
+.menu-soc-item {
+  width: 40px;
+  height: 40px;
+}
+.menu-soc-link {
+  width: 100%;
+  height: 100%;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  background-color: var(--primary-brand);
+  border-radius: 50%;
 }
 
 /* footer */
