--- a/css/styles.css
+++ b/css/styles.css
@@ -179,10 +179,6 @@ img {
   text-decoration: none;
 }
 
-.accent {
-  color: var(--primary-brand);
-}
-
 /* mob menu */
 
 .mob-menu {
@@ -200,7 +196,12 @@ img {
   justify-content: space-between;
   padding-top: 80px;
   padding-bottom: 40px;
+  padding-left: 40px;
   height: 100vh;
+}
+
+.menu-open-icon {
+  stroke: var(--dark);
 }
 
 .menu-close {
@@ -224,7 +225,7 @@ img {
 
 .menu-close:active {
   background-color: var(--pressed-state);
-  fill: #ffffff;
+  stroke: #ffffff;
 }
 
 .menu-item-link {
@@ -254,7 +255,7 @@ img {
 
 .menu-tel {
   font-weight: 600;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.11;
   color: var(--primary-brand);
 }
@@ -455,8 +456,6 @@ img {
   max-width: 1440px;
   margin: 0 auto;
 
-  display: flex;
-  justify-content: center;
   text-align: center;
 }
 
@@ -483,6 +482,8 @@ img {
   line-height: 1.11;
   letter-spacing: 0.02em;
   margin-bottom: 72px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero-btn {
@@ -562,7 +563,7 @@ img {
 
 .about-list {
   display: flex;
-  row-gap: 24px;
+  gap: 24px;
 }
 /* team */
 
@@ -801,8 +802,8 @@ img {
 
 .modal {
   position: absolute;
-  width: 408px;
-  min-height: 576px;
+  max-width: 408px;
+  max-height: 576px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
@@ -847,7 +848,7 @@ img {
 
 .modal-title {
   text-align: center;
-  margin-bottom: 14px;
+  margin-bottom: 12px;
 
   font-weight: 500;
   font-size: 16px;
@@ -914,7 +915,7 @@ img {
 
 .modal-comment {
   width: 100%;
-  height: 120px;
+  max-height: 120px;
   padding: 8px 16px;
   resize: none;
 
@@ -948,7 +949,7 @@ img {
   position: relative;
 
   font-weight: 400;
-  font-size: 12px;
+  font-size: 10px;
   line-height: 1.33;
   letter-spacing: 0.04em;
 
@@ -1000,4 +1001,8 @@ img {
 
 .check-btn:is(:hover, :focus) {
   background-color: var(--pressed-state);
+}
+
+.accent {
+  color: var(--primary-brand);
 }
