--- a/css/styles.css
+++ b/css/styles.css
@@ -802,7 +802,7 @@ img {
 
 .modal {
   position: absolute;
-  max-width: 408px;
+  width: 95%;
   max-height: 576px;
   top: 50%;
   left: 50%;
@@ -941,6 +941,8 @@ img {
 
 .checkbox-field {
   margin-bottom: 24px;
+  display: flex;
+  justify-content: center;
 }
 
 .check-text {
@@ -949,7 +951,7 @@ img {
   position: relative;
 
   font-weight: 400;
-  font-size: 10px;
+  font-size: 8px;
   line-height: 1.33;
   letter-spacing: 0.04em;
 
